fix text box jumping bug

--- a/get-it-done-app/css/style.css
+++ b/get-it-done-app/css/style.css
@@ -2,6 +2,13 @@ body {
   background-color: #262626;
 }
 
+.container {
+  position: fixed;
+  top: 100px;
+  width: 800px;
+  margin-left: 300px;
+}
+
 #searchTerm,
 #searchButton,
 #luckyButton {
